# meme-sieve

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt
meme_sieve/: cli.py
meme_sieve/classification_strategies/: classifier_base.py  google_genai.py
meme_sieve/classifiers/: classifier_base.py  google_genai.py  moondream.py  prompts.py  registry.py
